[update] minor fixed

--- a/2017/2017goal.md
+++ b/2017/2017goal.md
@@ -1,7 +1,7 @@
 # 2017年の目標
 - 英語の勉強頑張る
   - 特に最終目標は定めない
-  - [ ] 毎日何かしら勉強する
+  - [ ] なるべく毎日何かしら勉強する
   - [ ] TOEICを3月に受験
   - [ ] TOEICを12月に受験
 - [ ] 何か作る
