--- a/2017/201702/20170201.md
+++ b/2017/201702/20170201.md
@@ -1,5 +1,10 @@
 # What I did / やったこと
+- 英語アプリ実行！
+  - 進捗 : 280/600
 
 # What I want to do / やりたいこと
+- [初めてのMac](https://slideck.io/github.com/yamap55/Slide/20170113/first_mac.md#/)をblogに移植
 
 # What I thought / 思ったこと
+- 少しづつ英語わかってきた気がする。
+- 1月英語を続けたことでとりあえずは習慣づけられたかな？
