--- a/2017/201701/20170128.md
+++ b/2017/201701/20170128.md
@@ -1,10 +1,10 @@
 # What I did / やったこと
-- grailsのチュートリアル開始
+- 英語アプリ実行！
+  - 進捗 : 280/600
 
 # What I want to do / やりたいこと
 - [初めてのMac](https://slideck.io/github.com/yamap55/Slide/20170113/first_mac.md#/)をblogに移植
-- 2月の目標及び2月以降に英語以外何やるか方針決定。
 
 # What I thought / 思ったこと
-- 業務と多少関係あるといえばあるけど、簡単なWebアプリケーションくらいすぐ作れるようになろうと言うことでGrailsを開始。
-  - 多分3,4回目ｗ
+- 少しづつ英語わかってきた気がする。
+- 1月英語を続けたことでとりあえずは習慣づけられたかな？
