--- a/2017/201702/20170220.md
+++ b/2017/201702/20170220.md
@@ -1,6 +1,6 @@
 # What I did / やったこと
 - 英語アプリ実行！
-  - 進捗 : 430/700（+-0）
+  - 進捗 : 440/700（+10）
 
 # What I want to do / やりたいこと
 - [初めてのMac](https://slideck.io/github.com/yamap55/Slide/20170113/first_mac.md#/)をblogに移植
@@ -8,6 +8,6 @@
 - 体重記録アプリ作成。
 
 # What I thought / 思ったこと
-- 先週も+10づつやっていたはずで、今日も+10やったのに日報を見ると430で+-0。なぜだろう。。。
+- ~~先週も+10づつやっていたはずで、今日も+10やったのに日報を見ると430で+-0。なぜだろう。。。~~
 - 業務でだけど、Groovyスクリプトでデータ取ってきて更新、Grailsで作ったWebアプリで確認する的なの作れた。
 - Jenkinsでのスクリプト実行や、Webアプリのビルドまで作れたので満足！
